--- a/index.qmd
+++ b/index.qmd
@@ -1,16 +1,23 @@
 ---
 pagetitle: WaSHI Tool Gallery
 listing:
-  id: tools
-  contents: tools
-  type: grid
-  grid-columns: 3
-  image-height: 20em
-  sort: title
-  sort-ui: true
-  filter-ui: true
-  categories: true
-  fields: [image, date, title, description, categories]
+  - id: tools
+    contents: tools
+    type: grid
+    grid-columns: 3
+    image-height: 20em
+    sort: title
+    sort-ui: true
+    filter-ui: true
+    categories: true
+    fields: [image, date, title, description, categories]
+  - id: developing
+    contents: developing
+    type: grid
+    grid-columns: 3
+    image-height: 10em
+    sort: title
+    fields: [image, title, description, categories]
 ---
 
 This **Tool Gallery** showcases applications, calculators, and R packages developed primarily by the [Washington State Department of Agriculture (WSDA)](https://agr.wa.gov/departments/land-and-water/natural-resources/soil-health) to support science-based technical assistance for healthy soils as part of the [Washington Soil Health Initiative (WaSHI)](https://washingtonsoilhealthinitiative.com).
@@ -19,6 +26,15 @@ Each tile below links to a dedicated page with direct access to the tool, source
 code (if public), and related blog posts to explore and share the tools advancing soil health in Washington.
 
 ::: {#tools}
+:::
+
+<br>
+
+## Tools under development
+
+Learn about what we're currently working on!
+
+::: {#developing}
 :::
 
 <br>
